[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Entity/Sprite.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Entity/Entity.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/Actors/Green Ninja/Green Ninja.tres" type="SpriteFrames" id=4]
[ext_resource path="res://Assets/HUD/LifeBarMiniUnder.png" type="Texture" id=5]
[ext_resource path="res://Assets/HUD/LifeBarMiniProgress.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 7 )

[sub_resource type="CircleShape2D" id=4]
radius = 150.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 1.0
height = 1.0

[node name="Entity" type="KinematicBody2D" groups=["Entities (Debug)"]]
script = ExtResource( 2 )

[node name="Shape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 4 )
animation = "WalkD"
frame = 2
playing = true
script = ExtResource( 1 )

[node name="RangedArea" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="RangedArea"]
shape = SubResource( 4 )

[node name="MeleeArea" type="Area2D" parent="."]
position = Vector2( 0, 9 )
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="MeleeArea"]
rotation = 1.5708
shape = SubResource( 3 )

[node name="HealthBar" type="TextureProgress" parent="."]
margin_left = -9.0
margin_top = -14.0
margin_right = 9.0
margin_bottom = -10.0
max_value = 20.0
value = 20.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 6 )
